appId: com.monospace.notes
---
- launchApp
- tapOn:
    id: app-bar-menu
- tapOn:
    id: drawer-settings
- waitForAnimationToEnd
- assertVisible:
    id: app-bar-back
- assertVisible: GENERAL
- assertVisible: TEMA DE COLOR
- tapOn: IDIOMA.*
- waitForAnimationToEnd
- assertVisible: Cerrar hoja
- tapOn: Cerrar hoja
- waitForAnimationToEnd
- assertNotVisible: Cerrar hoja
- scrollUntilVisible:
    element: TAMAÑO DE TABULACIÓN.*
- assertVisible: ANCHO DE LÍNEA.*
- tapOn: TAMAÑO DE TABULACIÓN.*
- waitForAnimationToEnd
- tapOn: '8'
- waitForAnimationToEnd
- assertVisible: TAMAÑO DE TABULACIÓN.*
- tapOn: TAMAÑO DE TABULACIÓN.*
- waitForAnimationToEnd
- tapOn: '4'
- waitForAnimationToEnd
- scrollUntilVisible:
    element: UBICACIÓN DE LA NOTA DIARIA.*
- tapOn: UBICACIÓN DE LA NOTA DIARIA.*
- waitForAnimationToEnd
- tapOn: Raíz del repositorio
- waitForAnimationToEnd
- scrollUntilVisible:
    element: AL ELIMINAR.*
- tapOn: AL ELIMINAR.*
- waitForAnimationToEnd
- assertVisible: Mover a la carpeta .trash
- tapOn: Mover a la carpeta .trash
- waitForAnimationToEnd
- tapOn:
    id: app-bar-back
- assertVisible:
    id: home-create-note
